versioned_docs/version-6.0.0/api/2_capi/pushnotification/schedulenormalizedpushnotificationutc.md
# ScheduleNormalizedPushNotificationUTC

Schedules a normalized push notification to a user at a future absolute time.

<PartialServop service_name="pushNotification" operation_name="SCHEDULE_NORMALIZED_NOTIFICATION" />

## Method Parameters

| Parameter    | Description                     |
| ------------ | ------------------------------- |
| profileId    | Identifies the user to send to  |
| alertContent | Body and title of alert         |
| customData   | Optional custom data            |
| startTime    | Time to send notification (UTC) |

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp
string profileId = "kjhkjhgfkjshgkjh";
string alertContentJson = "{\"body\":\"content of message\",\"title\":\"message title\"}";
string customDataJson = "{\"field1\":\"value1\",\"field2\":\"value2\"}";
int startTime = 1437579786000;
SuccessCallback successCallback = (response, cbObject) =>
{
    Debug.Log(string.Format("Success | {0}", response));
};
FailureCallback failureCallback = (status, code, error, cbObject) =>
{
    Debug.Log(string.Format("Failed | {0}  {1}  {2}", status, code, error));
};

<%= data.branding.codePrefix %>.PushNotificationService.ScheduleNormalizedPushNotificationUTC(profileId, alertContentJson, customDataJson, startTime, successCallback, failureCallback);
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
const char *profileId = "kjhkjhgfkjshgkjh";
const char *alertContentJson = "{\"body\":\"content of message\",\"title\":\"message title\"}";
const char *customDataJson = "{\"field1\":\"value1\",\"field2\":\"value2\"}";
int startTime = 1437579786000;
<%= data.branding.codePrefix %>->getPushNotificationService()->scheduleNormalizedPushNotificationUTC(profileId, alertContentJson, customDataJson, startTime, this);
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Obj-C">
```

```objectivec
NSString *profileId = @"kjhkjhgfkjshgkjh";
NSString *alertContentJson = @"{\"body\":\"content of message\",\"title\":\"message title\"}";
NSString *customDataJson = @"{\"field1\":\"value1\",\"field2\":\"value2\"}";
int startTime = 1437579786000;
BCCompletionBlock successBlock;      // define callback
BCErrorCompletionBlock failureBlock; // define callback

[[<%= data.branding.codePrefix %> pushNotificationService] scheduleNormalizedPushNotificationUTC:profileId
           alertContentJson:alertContentJson
             customDataJson:customDataJson
                  startTime:startTime
            completionBlock:successBlock
       errorCompletionBlock:failureBlock
                   cbObject:nil];
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
String profileId = "kjhkjhgfkjshgkjh";
String alertContentJson = "{\"body\":\"content of message\",\"title\":\"message title\"}";
String customDataJson = "{\"field1\":\"value1\",\"field2\":\"value2\"}";
int startTime = 1437579786000;
this; // implements IServerCallback

<%= data.branding.codePrefix %>.getPushNotificationService().scheduleNormalizedPushNotificationUTC(profileId, alertContentJson, customDataJson, startTime, this);

public void serverCallback(ServiceName serviceName, ServiceOperation serviceOperation, JSONObject jsonData)
{
    System.out.print(String.format("Success | %s", jsonData.toString()));
}
public void serverError(ServiceName serviceName, ServiceOperation serviceOperation, int statusCode, int reasonCode, String jsonError)
{
    System.out.print(String.format("Failed | %d %d %s", statusCode,  reasonCode, jsonError.toString()));
}
```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
var profileId = "kjhkjhgfkjshgkjh";
var alertContentJson = {
    "body": "content of message",
    "title": "message title"
};
var customDataJson = {
    "field1": "value1",
    "field2": "value2"
};
var startTime = 1437579786000;

<%= data.branding.codePrefix %>.pushNotification.scheduleNormalizedPushNotificationUTC(profileId, alertContentJson, customDataJson, startTime, result =>
{
    var status = result.status;
    console.log(status + " : " + JSON.stringify(result, null, 2));
});
```

```mdx-code-block
</TabItem>
<TabItem value="dart" label="Dart">
```

```dart
var  profileId = "kjhkjhgfkjshgkjh";
var  alertContentJson = {
    "body": "content of message",
    "title": "message title"
};
var  customDataJson = {
    "field1": "value1",
    "field2": "value2"
};
var  startTime = 1437579786000;

ServerResponse result = await <%= data.branding.codePrefix %>.pushNotificationService.scheduleNormalizedPushNotificationUTC(profileId:profileId, alertContent:alertContentJson, customData:customDataJson, startTime:startTime);

if (result.statusCode == 200) {
    print("Success");
} else {
    print("Failed ${result.error['status_message'] ?? result.error}");
}
```

```mdx-code-block
</TabItem>
<TabItem value="roblox" label="Roblox">
```

```lua
local profileId = "kjhkjhgfkjshgkjh"
local alertContentJson = {
    body = "content of message",
    title = "message title"
}
local customDataJson = {
    field1 = "value1",
    field2 = "value2"
}
local startTime = 1437579786000

local callback = function(result)
    if result.statusCode == 200 then
        print("Success")
    else
        print("Failed | " .. tostring(result.status))
    end
end

<%= data.branding.codePrefix %>:getPushNotificationService():scheduleNormalizedPushNotificationUTC(profileId, alertContentJson, customDataJson, startTime, callback)
```

```mdx-code-block
</TabItem>
<TabItem value="gdscript" label="GDScript">
```

```gdscript
var profile_id = "kjhkjhgfkjshgkjh"
var alert_content_json = {
    "body": "content of message",
    "title": "message title"
}
var custom_data_json = {
    "field1": "value1",
    "field2": "value2"
}
var start_time = 1437579786000

var result = await <%= data.branding.codePrefix %>.push_notification_service.schedule_normalized_push_notification_utc(profile_id, alert_content_json, custom_data_json, start_time)

if result.status == 200:
	print("Success")
else:
	print("Failed: %s" % result.status_message)
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```cfscript
var profileId = "kjhkjhgfkjshgkjh";
var alertContentJson = {
    "body": "content of message",
    "title": "message title"
};
var customDataJson = {
    "field1": "value1",
    "field2": "value2"
};
var startTime = 1437579786000;
var pushNotificationProxy = bridge.getPushNotificationServiceProxy();

var postResult = pushNotificationProxy.scheduleNormalizedPushNotificationUTC(profileId, alertContentJson, customDataJson, startTime);
if (postResult.status == 200) {
    // Success!
}
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```r
{
    "service": "pushNotification",
    "operation": "SCHEDULE_NORMALIZED_NOTIFICATION",
    "data": {
        "profileId": "kjhkjhgfkjshgkjh",
        "alertContent": {
            "body": "content of message",
            "title": "message title"
        },
        "customData": {
            "field1": "value1",
            "field2": "value2"
        },
        "startDateUTC": "[[#ts+60000]]"
    }
}
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```
